--- a/css/exercises/styles.css
+++ b/css/exercises/styles.css
@@ -1,1 +1,19 @@
 /* Start adding your styling below! */ 
+body {
+    background-color: yellow;
+}
+p {
+    color: green;
+}
+h1 {
+    font-size: 36px;
+}
+text {
+    text-align: center;
+}
+.center {
+    text-align: center;
+}
+#list-color {
+    color: orangered
+}
